Add key storage setting

--- a/custom/content/index.html
+++ b/custom/content/index.html
@@ -5,9 +5,9 @@
   <body>
     Hello World!
 
-    <script>xyz.table('/account/*/title,email')</script>
+    <script>xyz.table('/account/*/title,email,id')</script>
 
-    <script>xyz.edit('/account/aap/*')</script>
+    <script>xyz.edit('/account/aap/title')</script>
 
 
   </body>
