Add content validation and editing

--- a/custom/content/index.html
+++ b/custom/content/index.html
@@ -6,8 +6,8 @@
 <body>
 Hello World!
 
-<script>xyz.ui('/account/*/title,email,id', {display:'list',drillDown: 'account'})</script>
-<script>xyz.ui('/account/$account/title')</script>
+<script>xyz.ui('/account/*/title,email,id', {display: 'list', drillDown: 'account'});</script>
+<script>xyz.ui('/account/$account/title', {action: 'edit', dynamic:true});</script>
 
 </body>
 </html>
