--- a/custom/content/index.html
+++ b/custom/content/index.html
@@ -7,7 +7,7 @@
 Hello World!
 
 <script>xyz.ui('/source/*/*', {display: 'list', drillDown: 'source'});</script>
-<script>xyz.ui('/source/$source/content', {action: 'edit', dynamic:true});</script>
+<script>xyz.ui('/source/$source/file/content', {action: 'edit', dynamic:true});</script>
 
 </body>
 </html>
