--- a/custom/content/index.html
+++ b/custom/content/index.html
@@ -6,7 +6,7 @@
 <body>
 Hello World!
 
-<script>xyz.ui('/source/*/*', {display: 'list', drillDown: 'source'});</script>
+<script>xyz.ui('/source/*/file', {display: 'list', drillDown: 'source'});</script>
 <script>xyz.ui('/source/$source/file/content', {action: 'edit', dynamic:true});</script>
 
 </body>
