Catch non existing files

--- a/custom/content/index.html
+++ b/custom/content/index.html
@@ -7,6 +7,8 @@
 Hello World!
 
 <script>xyz.ui('/source/*/file/content,id', {display: 'list', drillDown: 'source'});</script>
+
+<script>xyz.ui('/source/$source', {action: 'view', dynamic:true});</script>
 <script>xyz.ui('/source/$source/file/content', {action: 'edit', dynamic:true});</script>
 
 </body>
