--- a/custom/content/index.html
+++ b/custom/content/index.html
@@ -9,13 +9,13 @@
 <table id="main">
     <tr><td colspan="2" id="header">Koppelbot</td></tr>
     <tr>
-        <td rowspan="2" id="nav" width="20%" valign="top">
+        <td rowspan="3" id="nav" width="20%" valign="top">
             <script>
                 xyz.ui('/source/*/file/id', {display: 'list', select: 'source', multiSelect:'multiSource'});
             </script>
         </td>
         <td valign="top">
-            <script>xyz.ui('/source/$source/file/id', {action: 'view', showLabel:false});</script>
+            <script>xyz.ui('/source/$source/file/id', {showLabel:false});</script>
             <script>xyz.ui('/source/$source/file/content', {action: 'edit', dynamic: true, showLabel:false});</script>
 
 
@@ -23,7 +23,14 @@
     </tr>
     <tr>
         <td>
-            <script>xyz.ui('/source/$multiSource/file/id', {action: 'view', dynamic: true, showLabel:false});</script>
+            Geselecteerd:
+            <script>xyz.ui('/source/$multiSource/file/id', {dynamic: true, showLabel:false});</script>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Toevoegen:
+            <script>xyz.create('/source', {display:"create", dynamic: true});</script>
         </td>
     </tr>
 </table>
