Improve DOM rendering

--- a/custom/content/index.html
+++ b/custom/content/index.html
@@ -17,8 +17,6 @@
         <td valign="top">
             <script>xyz.ui('/source/$source/file/id', {showLabel:false});</script>
             <script>xyz.ui('/source/$source/file/content', {action: 'edit', dynamic: true, showLabel:false});</script>
-
-
         </td>
     </tr>
     <tr>
@@ -30,7 +28,7 @@
     <tr>
         <td>
             Toevoegen:
-            <script>xyz.create('/source', {display:"create", dynamic: true});</script>
+            <script>xyz.create('/source', {});</script>
         </td>
     </tr>
 </table>
