Implement put by file upload

--- a/custom/content/index.html
+++ b/custom/content/index.html
@@ -28,7 +28,7 @@
     <tr>
         <td>
             Toevoegen:
-            <script>xyz.create('/account', {});</script>
+            <script>xyz.create('/source', {});</script>
         </td>
     </tr>
 </table>
