Add reference type

--- a/custom/content/index.html
+++ b/custom/content/index.html
@@ -15,7 +15,7 @@
             </script>
         </td>
         <td valign="top">
-            <script>xyz.ui('/source/$source/file/id', {showLabel:false});</script>
+            <script>xyz.ui('/source/$source', {showLabel:false});</script>
             <script>xyz.ui('/source/$source/file/content', {action: 'edit', dynamic: true, showLabel:false});</script>
         </td>
     </tr>
