Refactor ui interface

--- a/custom/content/index.html
+++ b/custom/content/index.html
@@ -33,7 +33,7 @@
     <tr>
         <td>
             Create fact:
-            <script>xyz.create('/fact', {});</script>
+            <script>xyz.ui('/fact', {display:'create'});</script>
             Edit fact:
             <script>xyz.ui('/fact/$fact', {action: 'edit'});</script>
         </td>
@@ -41,7 +41,7 @@
     <tr>
         <td>
             Create source:
-            <script>xyz.create('/source', {});</script>
+            <script>xyz.ui('/source', {display:'create'});</script>
         </td>
     </tr>
 </table>
