--- a/custom/content/index.html
+++ b/custom/content/index.html
@@ -16,8 +16,7 @@
                 xyz.ui('/source/*/file/id', {
                     display: 'list',
                     select: 'source',
-                    multiSelect: 'multiSource',
-                    addCreateButton: true
+                    multiSelect: 'multiSource'
                 });
             </script>
         </td>
@@ -27,7 +26,7 @@
         </td>
         <td rowspan="4" id="facts" width="20%" valign="top">
             <script>
-                xyz.ui('/fact/*', {display: 'list', select: 'fact', addCreateButton: true});
+                xyz.ui('/fact/*', {display: 'list', select: 'fact'});
             </script>
         </td>
     </tr>
