--- a/custom/content/index.html
+++ b/custom/content/index.html
@@ -13,7 +13,7 @@
     <tr>
         <td rowspan="4" id="sources" width="20%" valign="top">
             <script>
-                xyz.ui('/source/*/file/id', {
+                xyz.ui2('/source/*/file/id', {
                     display: 'list',
                     select: 'source',
                     multiSelect: 'multiSource'
