--- a/custom/content/index.html
+++ b/custom/content/index.html
@@ -13,7 +13,7 @@
     <tr>
         <td rowspan="4" id="sources" width="20%" valign="top">
             <script>
-                xyz.ui2('/source/*/file/id', {
+                xyz.ui('/source/*/file/id', {
                     display: 'list',
                     select: 'source',
                     multiSelect: 'multiSource'
@@ -21,12 +21,12 @@
             </script>
         </td>
         <td valign="top">
-            <script>xyz.ui2('/source/$source', {showLabel: false});</script>
+            <script>xyz.ui('/source/$source', {showLabel: false});</script>
             <script>xyz.ui('/source/$source/file/content', {action: 'edit', dynamic: true, showLabel: false});</script>
         </td>
         <td rowspan="4" id="facts" width="20%" valign="top">
             <script>
-                xyz.ui2('/fact/*', {display: 'list', select: 'fact'});
+                xyz.ui('/fact/*', {display: 'list', select: 'fact'});
             </script>
         </td>
     </tr>
