Implement select and use type and action rendering

--- a/custom/content/index.html
+++ b/custom/content/index.html
@@ -32,7 +32,7 @@
     </tr>
     <tr>
         <td>
-            Geselecteerd:
+            Selected sources:
             <script>xyz.ui('/source/$multiSource/file/id', {dynamic: true, showLabel: false});</script>
         </td>
     </tr>
