Use request content to fill gaps in response content

--- a/custom/main/content/index.html
+++ b/custom/main/content/index.html
@@ -13,7 +13,7 @@
     <tr>
         <td rowspan="4" id="sources" width="20%" valign="top">
             <script>
-                xyz.ui('/source/*/file/id', {display: 'list', select: 'source', multiSelect: 'multiSource'});
+                xyz.ui('/source/*/file/id,content', {display: 'list', select: 'source', multiSelect: 'multiSource'});
             </script>
         </td>
         <td valign="top">
