Add template, tutorial and local server

--- a/custom/main/content/index.html
+++ b/custom/main/content/index.html
@@ -13,34 +13,39 @@
     <tr>
         <td rowspan="4" id="sources" width="20%" valign="top">
             <script>
-                xyz.ui('/source/*/file/id,content', {display: 'list', select: 'source', multiSelect: 'multiSource'});
+                xyz.ui({
+                    uri: '/source/*/file/id,content',
+                    display: 'list',
+                    select: 'source',
+                    multiSelect: 'multiSource'
+                });
             </script>
         </td>
         <td valign="top">
             View source:
             <p>
-                <script>xyz.ui('$source', {showLabel: false});</script>
+                <script>xyz.ui({uri: '$source', showLabel: false});</script>
             </p>
 
             Edit source content:
             <p>
-                <script>xyz.ui('$source/file/content', {action: 'edit', dynamic: true, showLabel: false});</script>
+                <script>xyz.ui({uri: '$source/file/content', action: 'edit', dynamic: true, showLabel: false});</script>
             </p>
         </td>
         <td rowspan="4" id="facts" width="20%" valign="top">
-            <script>xyz.ui('/fact/*', {display: 'list', select: 'fact'});</script>
+            <script>xyz.ui({uri: '/fact/*', display: 'list', select: 'fact'});</script>
         </td>
     </tr>
     <tr>
         <td>
             Multi selected sources:
-            <script>xyz.ui('$multiSource/file/id', {dynamic: true, showLabel: false});</script>
+            <script>xyz.ui({uri: '$multiSource/file/id', dynamic: true, showLabel: false});</script>
         </td>
     </tr>
     <tr>
         <td>
             Edit fact:
-            <script>xyz.ui('$fact', {action: 'edit'});</script>
+            <script>xyz.ui({uri: '$fact', action: 'edit'});</script>
         </td>
     </tr>
 </table>
