Add sign in, sign up user interface

--- a/custom/main/content/index.html
+++ b/custom/main/content/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 <table id="main">
-    <tr>
-        <td colspan="3" id="header">Koppelbot</td>
+    <tr class="header">
+        <td colspan="2">Koppelbot</td>
+        <td><xyz uri="/session" display="login"/></td>
     </tr>
     <tr>
         <td rowspan="4" id="sources" width="20%" valign="top">
