Improve combined single value view through item display

--- a/custom/main/content/index.html
+++ b/custom/main/content/index.html
@@ -19,11 +19,11 @@
         </td>
         <td valign="top">
             <p>
-                <xyz uri="$source" showLabel="false"/>
+                <xyz uri="$source/file" showLabel="false"/>
             </p>
         </td>
         <td rowspan="4" id="facts" width="20%" valign="top">
-            <xyz uri="/fact/*" display="list" select="fact"/>
+            <xyz uri="/fact/*/title,date" display="list" select="fact"/>
         </td>
     </tr>
 </table>
