--- a/custom/main/content/index.html
+++ b/custom/main/content/index.html
@@ -23,7 +23,7 @@
         </td>
         <td id="facts" width="20%" valign="top">
             <h3>Facts</h3>
-            <xyz uri="/fact/*/title,date" createButtonText="Add fact" display="list" select="fact" showHeader="false"/>
+            <xyz id="timeline" uri="/fact/*" createButtonText="Add fact" display="timeline" horizontal="false" select="fact" showHeader="false"/>
         </td>
     </tr>
 </table>
