Add date picker

--- a/custom/main/content/index.html
+++ b/custom/main/content/index.html
@@ -29,8 +29,14 @@
         </td>
     </tr>
     <tr>
-        <td  valign="top">
-           <xyz uri="$fact/title,date,sources" showLabels="true" showTitle="true" showEditButton="true" showDeleteButton="true"/>
+        <td valign="top">
+           <xyz
+                   uri="$fact/title,date,sources"
+                   showLabels="true"
+                   showTitle="true"
+                   showEditButton="true"
+                   showDeleteButton="true"
+           />
         </td>
     </tr>
 </table>
