Add suboption handling and select by reference

--- a/custom/main/content/index.html
+++ b/custom/main/content/index.html
@@ -36,6 +36,7 @@
                    showTitle="true"
                    showEditButton="true"
                    showDeleteButton="true"
+                   sources_select="source"
            />
         </td>
     </tr>
