--- a/custom/main/content/index.html
+++ b/custom/main/content/index.html
@@ -17,7 +17,7 @@
     <tr>
         <td rowspan="2" id="sources" width="20%" valign="top">
             <h3>Sources</h3>
-            <xyz uri="/source/*/file/id" createButtonText="Upload source" display="list" select="source" showHeader="false"/>
+            <xyz uri="/source/*/file/id" createButtonText="Add source" display="list" select="source" showHeader="false"/>
         </td>
         <td id="view" valign="top">
             <xyz uri="$source/file" showLabels="false" showTitle="true" showEditButton="true" showDeleteButton="true"/>
