Fix deleting of entities

--- a/custom/main/content/index.html
+++ b/custom/main/content/index.html
@@ -20,8 +20,7 @@
             <xyz uri="/source/*/file/id" createButtonText="Add source" display="list" select="source" showHeader="false"/>
         </td>
         <td id="view" valign="top">
-            <xyz uri="$source/file" showLabels="false" showTitle="true" showEditButton="true" showDeleteButton="true"/>
-
+            <xyz uri="$source" showLabels="false" showTitle="true" showEditButton="true" showDeleteButton="true"/>
         </td>
         <td rowspan="2" id="facts" width="20%" valign="top">
             <h3>Facts</h3>
