Fix done button for facts

--- a/custom/main/content/index.html
+++ b/custom/main/content/index.html
@@ -30,7 +30,7 @@
     <tr>
         <td valign="top">
            <xyz
-                   uri="$fact/title,date,sources"
+                   uri="$fact/*"
                    showLabels="true"
                    showTitle="true"
                    showEditButton="true"
