--- a/custom/main/content/map.html
+++ b/custom/main/content/map.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
-  <xyz uri="/location/*/geojson" display="map" />
+  <xyz uri="/location/*/geojson" select="location" display="map" style="background-image:url('./kaart.jpg'); background-repeat:no-repeat;"/>
+  <xyz uri="$location/date,geojson,title" display="item"/>
 </body>
 </html>
