Add photo to location entity

--- a/custom/main/content/map.html
+++ b/custom/main/content/map.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <xyz uri="/location/*/geojson" markUserLocation="true" select="location" display="map" style="background-image:url('./kaart.jpg'); background-repeat:no-repeat;"/>
-  <xyz uri="$location/date,geojson,title" display="item"/>
+  <xyz uri="$location/date,geojson,title,photo" display="item"/>
 </body>
 </html>
