Add title to vanwieisdestad

--- a/custom/main/content/vanwieisdestad.html
+++ b/custom/main/content/vanwieisdestad.html
@@ -26,7 +26,7 @@
     </tr>
     <tr>
       <td>
-        <xyz uri="$location/photo,owner" display="item"/>
+        <xyz uri="$location/photo,owner,title" display="item"/>
       </td>
       <td width="25%" style="background-color:white;">
         <xyz uri="/location/*/count(owner)" groupby="owner" display="chart" flavor="pie"/>
