Use openlayers for map display

--- a/custom/main/content/vanwieisdestad.html
+++ b/custom/main/content/vanwieisdestad.html
@@ -18,7 +18,7 @@
     <tr><td colspan="2"><h1>Van wie is de stad?</h1></td></tr>
     <tr>
       <td style="text-align:center;">
-        <xyz uri="/location/*/geojson,owner" color="owner" markUserLocation="true" select="location" display="map" style="background-image:url('./kaart.jpg'); background-repeat:no-repeat;"/>
+        <xyz uri="/location/*/geojson,owner" color="owner" markUserLocation="true" select="location" display="map"/>
       </td>
       <td valign="top" width="25%" style="background-color:#EFEFEF;">
         <xyz uri="/location/*/count(owner)" color="owner" groupby="owner" display="chart" flavor="table"/>
