Add option to hide chart legend

--- a/custom/vanwieisdestad/content/index.html
+++ b/custom/vanwieisdestad/content/index.html
@@ -30,7 +30,7 @@
         <xyz uri="$locatie/Bron,Datum,EigenaarID,Bestand" display="item"/>
       </td>
       <td width="25%" style="background-color:white;">
-        <xyz uri="/locatie/*/count(EigenaarID)" groupby="EigenaarID" display="chart" flavor="pie"/>
+        <xyz uri="/locatie/*/count(EigenaarID)" groupby="EigenaarID" display="chart" showLegend="false" flavor="pie"/>
       </td>
     </tr>
     <tr><td colspan="2"><i>Powered by Koppelbot</i></td></tr>
