Update variables selection

--- a/custom/sample/content/index.html
+++ b/custom/sample/content/index.html
@@ -20,19 +20,19 @@
         <td valign="top">
             View sample:
             <p>
-                <xyz uri="$sample" showLabel="false"/>
+                <xyz uri="/sample/$sample" showLabel="false"/>
             </p>
 
             Edit sample string:
             <p>
-                <xyz uri="$sample/string" action="edit" showLabel="false"/>
+                <xyz uri="/sample/$sample/string" action="edit" showLabel="false"/>
             </p>
         </td>
     </tr>
     <tr>
         <td>
             Multi selected sources:
-            <xyz uri="$multiSample/id" dynamic="true" showLabel="false"/>
+            <xyz uri="/sample/$multiSample/id" dynamic="true" showLabel="false"/>
         </td>
     </tr>
 </table>
