--- a/custom/tutorial/content/index.html
+++ b/custom/tutorial/content/index.html
@@ -13,7 +13,7 @@
 
     <h3>Selected fruit</h3>
 
-    <xyz uri="$myFruit" display="item"/>
+    <xyz uri="/fruit/$myFruit" display="item"/>
 
 </body>
 </html>
