--- a/custom/vanwieisdestad/content/index.html
+++ b/custom/vanwieisdestad/content/index.html
@@ -26,7 +26,7 @@
     </tr>
     <tr>
       <td>
-        <xyz uri="$locatie/Type,DocumentID,EigenaarID" display="item"/>
+        <xyz uri="/locatie/$locatie/Type,DocumentID,EigenaarID" display="item"/>
       </td>
       <td width="25%" style="background-color:white;">
         <xyz uri="/locatie/*/count(EigenaarID)" groupby="EigenaarID" display="chart" showLegend="false" flavor="pie"/>
