--- a/custom/vanwieisdestad/content/index.html
+++ b/custom/vanwieisdestad/content/index.html
@@ -29,7 +29,7 @@
         <xyz uri="/locatie/$locatie/Type,DocumentID,EigenaarID" display="item"/>
       </td>
       <td width="25%" style="background-color:white;">
-        <xyz uri="/locatie/*/count(EigenaarID)" groupby="EigenaarID" display="chart" showLegend="false" flavor="pie"/>
+        <xyz uri="/locatie/*/count(EigenaarID)?EigenaarID==$EigenaarIDs" groupby="EigenaarID" display="chart" showLegend="false" flavor="pie"/>
       </td>
     </tr>
     <tr><td colspan="2"><i>Powered by Koppelbot</i></td></tr>
