Make footer link to koppelbot

--- a/custom/vanwieisdestad/content/index.html
+++ b/custom/vanwieisdestad/content/index.html
@@ -32,7 +32,7 @@
         <xyz uri="/locatie/*/count(EigenaarID)?EigenaarID==$EigenaarIDs" groupby="EigenaarID" display="chart" showLegend="false" flavor="pie"/>
       </td>
     </tr>
-    <tr><td colspan="2"><i>Powered by Koppelbot</i></td></tr>
+    <tr><td colspan="2"><i><a href="https://koppelbot.org">Powered by Koppelbot</a></i></td></tr>
   </table>
 </body>
 </html>
