--- a/custom/vanwieisdestad/content/index.html
+++ b/custom/vanwieisdestad/content/index.html
@@ -4,35 +4,42 @@
     <link rel="stylesheet" type="text/css" href="./xyz-style.css"/>
     <script type="text/javascript" src="./xyz-ui.js"></script>
     <style>
-    body{
-      padding-top: 0.5cm;
-      padding-left: 1cm;
-      padding-right: 1cm;
+    #locatie{
+      background-color: white;
+      position: fixed;
+      z-index: 100;
+      bottom: 0;
+      width: 50%;
     }
-
+    #logo {
+      position: fixed;
+      z-index: 200;
+      top: 30px;
+      left: 30px;
+      opacity: 1;
+    }
     </style>
 </head>
 <body>
 
-  <table width="100%">
-    <tr><td colspan="2"><h1>Van wie is de stad?</h1></td></tr>
+  <table width="100%" height="100%">
     <tr>
-      <td style="text-align:center;">
-        <xyz uri="/locatie/*/geojson,EigenaarID?EigenaarID==$EigenaarIDs" showCreateButton="false" color="EigenaarID" location="geojson" markUserLocation="true" select="locatie" display="map"/>
+      <td style="text-align:center;" rowspan="3">
+        <xyz style="height:100%; width:100%" uri="/locatie/*/geojson,EigenaarID?EigenaarID==$EigenaarIDs" showCreateButton="false" color="EigenaarID" location="geojson" markUserLocation="true" select="locatie" display="map"/>
       </td>
       <td valign="top" width="25%" style="background-color:#EFEFEF;">
-        <xyz uri="/locatie/*/count(EigenaarID),sum(Oppervlakte)" color="EigenaarID" groupby="EigenaarID" display="chart"  multiSelect="EigenaarIDs" flavor="table" style="height:50vh; overflow-y:scroll;"/>
+        <xyz uri="/locatie/*/count(EigenaarID),sum(Oppervlakte)" color="EigenaarID" groupby="EigenaarID" display="chart"  multiSelect="EigenaarIDs" flavor="table" style="height:60vh; overflow-y:scroll; overflow-x:hidden;"/>
       </td>
     </tr>
     <tr>
-      <td>
-        <xyz uri="/locatie/$locatie/Type,DocumentID,EigenaarID" display="item"/>
-      </td>
       <td width="25%" style="background-color:white;">
         <xyz uri="/locatie/*/count(EigenaarID)?EigenaarID==$EigenaarIDs" groupby="EigenaarID" display="chart" showLegend="false" flavor="pie"/>
       </td>
     </tr>
-    <tr><td colspan="2"><i><a href="https://koppelbot.org">Powered by Koppelbot</a></i></td></tr>
+    <tr><td style="text-align:right;font-size: 10pt; vertical-align: bottom; padding-right: 10px;"><i><a href="https://koppelbot.org">Powered by Koppelbot</a></i></td></tr>
   </table>
+  <img id="logo" src="./vanwieisdestad/vanwieisamersfoort.png"/>
+  <xyz id="locatie" uri="/locatie/$locatie/Type,DocumentID,EigenaarID,Oppervlakte" display="item"/>
+
 </body>
 </html>
