--- a/custom/vanwieisdestad/content/index.html
+++ b/custom/vanwieisdestad/content/index.html
@@ -27,8 +27,8 @@
       <td style="text-align:center;" rowspan="3">
         <xyz style="height:100%; width:100%" uri="/locatie/*/geojson,EigenaarID?EigenaarID==$EigenaarIDs" showCreateButton="false" color="EigenaarID" location="geojson" markUserLocation="true" select="locatie" display="map"/>
       </td>
-      <td valign="top" width="25%" style="background-color:#EFEFEF;">
-        <xyz uri="/locatie/*/count(EigenaarID),sum(Oppervlakte)" color="EigenaarID" groupby="EigenaarID" display="chart"  multiSelect="EigenaarIDs" flavor="table" style="height:60vh; overflow-y:scroll; overflow-x:hidden;"/>
+      <td valign="top" width="30%" style="background-color:#EFEFEF;">
+        <xyz uri="/locatie/*/Percelen=count(EigenaarID),Oppervlakte=sum(Oppervlakte)" color="EigenaarID" groupby="EigenaarID" display="chart"  multiSelect="EigenaarIDs" flavor="table" style="height:60vh; overflow-y:scroll; overflow-x:hidden;"/>
       </td>
     </tr>
     <tr>
